--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "@types/codemirror": "^5.60.5",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^14.18.18",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
@@ -36,6 +37,7 @@
     "highlight.js": "^11.6.0",
     "html-entities": "^2.3.3",
     "katex": "^0.16.0",
+    "leaflet": "^1.9.3",
     "markdown-it": "^13.0.1",
     "markdown-it-mark": "^3.0.1",
     "mermaid": "8.14.0",
